<resources>
    <string name="app_name">Rikskampen</string>
    <string name="title_activity_main_leader">Main Board Activity</string>
    <string name="ActivityModule_Allow_Camera">Access to camera has been denied, please allow Rikskampen to take your activity photo</string>
    <string name="ActivityModule_Camera_Access_Denied">Camera access is denied</string>
    <string name="ActivityModule_Device_Not_Support_Camera">Your device doesnt have a camera</string>
    <string name="ActivityModule_Empty_History">Take a before picture to follow your transformation!</string>
    <string name="ActivityModule_EnterWaist">Enter your waist (Cm)</string>
    <string name="ActivityModule_EnterWeight">Enter your weight (Kg)</string>
    <string name="ActivityModule_Getting_Locaiton">Getting your location ...</string>
    <string name="ActivityModule_Location_Permission_Restrict">Location service is restricted, kindly allow from device settings.</string>
    <string name="ActivityModule_Motion_Access">Access to pedometer has been denied, please allow Rikskampen to track your daily activies</string>
    <string name="ActivityModule_Motion_Access_Denied">Motion sensor access is denied</string>
    <string name="ActivityModule_PushNotification_Access">Rikskampen cannot notify you about latest updates. Please enable push notifications from settings.</string>
    <string name="ActivityModule_PushNotification_Access_Denied">Push notifications blocked</string>
    <string name="ActivityModule_Unable_To_Access_Location">Unable to access your location</string>
    <string name="ActivityModule_Unable_To_Access_Location_Description">RiksKampen is unable to access your location to update your todays activity. Please allow location access from devices settings.</string>
    <string name="ActivityModule_Waist">Waist (cm)</string>
    <string name="ActivityModule_WeightKG">Weight (Kg)</string>
    <string name="ActivityMoudle_Location_Permission_Restricted">Location permission is restricted</string>
    <string name="ActivityModule_AddActivity">Add Activity</string>
    <string name="AllergyModule_Allergies">Allergies</string>
    <string name="AllergyModule_AllergiesSavedSuccessfully">Allergies saved successfully</string>
    <string name="AllergyModule_AllergiesSavedFailed">Allergies Not Updated...</string>
    <string name="AllergyModule_Allergies_Allready_Added">You have already added this allergy</string>
    <string name="AllergyModule_Save_Changes">Do you want to save the changes?</string>
    <string name="AllergyModule_Search_And_Allergy">Search and add allergies</string>
    <string name="AllergyModule_No_Allery_Found">No allergies were found</string>
    <string name="BottomTabs_Home">HOME</string>
    <string name="BottomTabs_Leaderboard">LEADERBOARD</string>
    <string name="BottomTabs_Map">MAP</string>
    <string name="BottomTabs_Profile">PROFILE</string>
    <string name="ChatModule_WriteMessage">Write your message...</string>
    <string name="Competition_Has_Ended">Your competition has ended!</string>
    <string name="Competition_Start_In">Your competition will start</string>
    <string name="Competition_Start_Soon">Your competition will start soon!</string>
    <string name="Competition_Will_Start_In">Your competiton will start in</string>
    <string name="Competition_Time_Ticker_Days">Days</string>
    <string name="Competition_Time_Ticker_Dau">Day</string>
    <string name="Competition_Time_Ticker_Hour">Hour</string>
    <string name="Competition_Time_Ticker_Hours">Hours</string>
    <string name="Competition_Time_Ticker_Minutes">Minutes</string>
    <string name="Competition_Time_Ticker_Seconds">Seconds</string>
    <string name="Competition_Time_Ticker_CompetitionStartIn">Your competition will start in</string>
    <string name="Diary_Module_Describe_Day">Describe your day...</string>
    <string name="Diary_Module_HowWasDay">How was your overall day?</string>
    <string name="EnablePushNotification">Push Notifications are disabled, kindly allow from device settings.</string>
    <string name="Error_General">There was an error, we are working on it.</string>
    <string name="ForgotPasswordModule_EmailNotExist">Your email doesnt exist in our records</string>
    <string name="ForgotPasswordModule_text">Forgot Password?</string>
    <string name="General_Back"> Back</string>
    <string name="General_Cancel">Cancel</string>
    <string name="General_Continue">Continue</string>
    <string name="General_Description">Description</string>
    <string name="General_Title">Title:</string>
    <string name="General_No">No</string>
    <string name="General_No_Results">No Results</string>
    <string name="General_Not_Now">Not now</string>
    <string name="General_OK">OK</string>
    <string name="General_Save">Save</string>
    <string name="General_Settings">Settings</string>
    <string name="General_Warning">Warning!</string>
    <string name="General_Yes">Yes</string>
    <string name="General_NA">N/A</string>
    <string name="General_RenewPackage">You package has expired, please renew it from Rikskampen website.</string>
    <string name="General_PleaseUpdatePackage">You package has expired, please renew it from Rikskampen website.</string>
    <string name="General_UpdatePackage">Update Package</string>
    <string name="General_NoInternetConnection">No Internet Connection!</string>
    <string name="General_RequestTimedOut">Request timed out!</string>
    <string name="General_Next">Next</string>
    <string name="General_GO">Go</string>
    <string name="General_Finish">Finish</string>
    <string name="General_Step_Counting_Preference">Pedometer Preference</string>
    <string name="General_Step_Counting_Stop_steps">My phone stopped counting steps!</string>
    <string name="General_Google_Fit">Do you want to track your steps with Google Fit!</string>
    <string name="General_Step_Counting_Screen_ON">Hold the screen on</string>
    <string name="General_Step_Counting_Screen_ON_DES">Turn on if you have problems with counting Steps       </string>
    <string name="General_Step_Counting_PopUp_Des">To ensure accurate step count, we recommend that you adjust the following settings.</string>
    <string name="General_Step_Counting_DrawOver_Other_Apps">Let drag on other apps</string>
    <string name="General_Step_Counting_System_Settings">Necessary system settings</string>
    <string name="General_Step_Counting_System_Settings_Steps">Step 1: Search the RiksKampen in app launch settings \n \nStep 2: Disable Manage Automatically \n \nStep 3: Activate all three options</string>
    <string name="General_Step_Counting_Toast">Please Allow Background runnning for Rikskampen</string>
    <string name="General_Today_Steps">Today Steps : </string>
    <string name="General_PedoMeter_session">Pedometer session is running in the background.</string>
    <string name="General_Step_Count_Stop_Notification">Your Step Counting is Stoped Please Open Rikskampen.</string>
    <string name="General_Activity_Reminder_Notification">Please Upload the Activity to show us your Active!!.</string>
    <string name="General_Video_Session_Live">Your Meeting is Ready.</string>
    <string name="General_Steps">Steps</string>
    <string name="General_Stars">Stars</string>
    <string name="General_Calories">Calories</string>
    <string name="General_Distance">Distance</string>
    <string name="General_Waist">Waist</string>
    <string name="General_Weight">Weight</string>
    <string name="General_for">for</string>
    <string name="HealthProgramsModule_Empty_Plan">No plans are assigned yet</string>
    <string name="HealthProgramsModule_Nutrition">RECIPIES</string>
    <string name="HealthProgramsModule_PDF">No recipe PDF available.</string>
    <string name="HealthProgramsModule_TrainingAndFitness">TRAINING VIDEOS</string>
    <string name="HealthProgramsModule_MyDiet">MY DIET PLAN</string>
    <string name="Home_Activity">ACTIVITY</string>
    <string name="Home_HealthAndPrograms">HEALTH &amp; PROGRAMS</string>
    <string name="LeaderboardModule_leaderboard">Leaderboard</string>
    <string name="LeaderboardModule_Position">Position</string>
    <string name="LoginModule_Already_Login_Detail">You are already logged in from another device of yours. You may loose your unsynced activities. Do you want to continue?</string>
    <string name="LoginModule_Already_Login_Title">Already logged in</string>
    <string name="LoginModule_CredentialDontMatch">These credentials do not match our records.</string>
    <string name="LoginModule_EnterValidEmail">Please enter a valid email.</string>
    <string name="LoginModule_EnterValidPassword">Please enter a valid password.</string>
    <string name="LoginModule_Session_Timed_Out">The session timed out, please login again.</string>
    <string name="LoginModule_Remmber_me">Remmber me</string>
    <string name="LoginModule_Login_Btn">Login</string>
    <string name="Man">Male</string>
    <string name="MapModule_AcheivedStarRemainingStar">remaining %@ on your selected %@ path.</string>
    <string name="MapModule_Drag_Set_Home">Drag to adjust your home location</string>
    <string name="MapModule_Finish">Finish</string>
    <string name="MapModule_Home">Home</string>
    <string name="MapModule_Home_Location">home location</string>
    <string name="MapModule_Home_Location_Saved">Your home location has been saved.</string>
    <string name="MapModule_No_Stars_Found">Sorry, couldn t find any stars around you.</string>
    <string name="MapModule_SelectedStar">You have selected %@ \n to achieve %@</string>
    <string name="MapModule_Set_Home_Location">Please set your home location.</string>
    <string name="MapModule_Home_Failed">Your hometown is less than 1 Km.</string>
    <string name="MapModule_Something_Went_Wrong">Sorry something went wrong Please Try Again...</string>
    <string name="MapModule_No_Road_Accessable">No road is accessible due to motorway or water passage.</string>
    <string name="MapModule_Star">Star</string>
    <string name="MapModule_Star_Is">Star is </string>
    <string name="MapModule_Stars">Stars</string>
    <string name="MapModule_Stars_Are">Stars are </string>
    <string name="MapModule_Start">Start</string>
    <string name="MapModule_Stop">Stop</string>
    <string name="MapModule_YouGot">You got</string>
    <string name="MapModule_Congratulations">Congratulations</string>
    <string name="MapModule_NotReachedTarget">You havent reached your target yet, are you sure you want to stop?</string>
    <string name="MapModule_Time">Time</string>
    <string name="MoreModuel_Logout_Sure">Are you sure you want to logout?</string>
    <string name="MoreModule_About">About us</string>
    <string name="MoreModule_AddAllergies">Add allergies/dislikes</string>
    <string name="MoreModule_ChangePassword">Change Password</string>
    <string name="MoreModule_Chat_Cannot_Initiate">You cannot chat, because a trainer has not been assigned to you yet.</string>
    <string name="MoreModule_Logout">Logout</string>
    <string name="MoreModule_Policy">Rikskampen Policy</string>
    <string name="MoreModule_PrivacyPolicy">Privacy Policy</string>
    <string name="MoreModule_Congratulations_Notification">Congratulations you Got</string>
    <string name="MoreModule_You_Got_Notification">You have Got</string>
    <string name="MoreModule_Remaining_are_Notification">Remaining are</string>
    <string name="NutritionDetail_More">More</string>
    <string name="NutritionDetail_NoMealAssigned">No Meal Assigned</string>
    <string name="NutritionIngredient_Ingredients">Ingrds</string>
    <string name="NutritionIngredient_Quantity">Quantity</string>
    <string name="NutritionIngredient_Fats">Fats</string>
    <string name="ResetPasswordModule_EnterNewPassword">Enter your new password</string>
    <string name="ResetPasswordModule_ReEnterNewPassword">Re-enter your new password</string>
</resources>