<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_t"
        android:fontFamily="@font/montserrat"
        android:title="@string/BottomTabs_Home" />


    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_leader_board"
        android:fontFamily="@font/montserrat"
        android:title="@string/BottomTabs_Leaderboard" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/icon_location"
        android:fontFamily="@font/montserrat"
        android:title="@string/BottomTabs_Map" />

<!--

    <item
        android:id="@+id/navigation_order_history"
        android:icon="@drawable/ic_order_t"
        android:title="@string/title_history" />
-->


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_icon_profile1"
        android:fontFamily="@font/montserrat"
        android:title="@string/BottomTabs_Profile" />

</menu>
