<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/item_background_white_circle"
    >

    <TextView
        android:id="@+id/heding"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/very_dark_gray"
        android:text="@string/General_Step_Counting_PopUp_Des"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heding"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/drawOverAppsPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_20sdp"
            >
            <ImageView
                android:id="@+id/help_ic"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_off"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/help_ic"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/General_Step_Counting_DrawOver_Other_Apps"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/General_GO"
                android:fontFamily="@font/montserrat"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/_20sdp"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/batteryOptimizationAppsPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_20sdp"
            >
            <ImageView
                android:id="@+id/switch_ic"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_off"/>
            <TextView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/switch_ic"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:text="Please turn off Battery Optimization for Rikskampen"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/_20sdp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/powerManagePermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="visible"
            >
            <ImageView
                android:id="@+id/bightness_ic"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_off"/>
            <TextView
                android:id="@+id/screnOntxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/bightness_ic"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/very_dark_gray"
                android:text="@string/General_Step_Counting_System_Settings"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/General_GO"
                android:fontFamily="@font/montserrat"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/_20sdp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/huawaiPowerDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:visibility="visible"
            >
            <TextView
                android:id="@+id/huaweiDestxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/very_dark_gray"
                android:text="@string/General_Step_Counting_System_Settings_Steps"
                />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>