<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_img"
    >

    <RelativeLayout
        android:id="@+id/headerLyout"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:background="@drawable/app_bar_color"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">




        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:onClick="onBackClick"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/icon_back_arrow_white"
            />



        <ImageView
            android:id="@+id/logo"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_actionbar"/>

        <TextView
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:visibility="invisible"
            android:textStyle="bold"
            android:text="Profil"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

    </RelativeLayout>




    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginModule_EnterValidPassword"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_below="@+id/title"

            android:background="@drawable/grey_border_tint"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/ResetPasswordModule_EnterNewPassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textColorHint="@color/dark_gray"
            />

        <EditText
            android:id="@+id/retrypass"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/grey_border_tint"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/ResetPasswordModule_ReEnterNewPassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textColorHint="@color/dark_gray"
            android:layout_below="@+id/newpassword"
            />

        <Button
            android:id="@+id/SubmitPassLayout"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_clr"
            android:backgroundTint="#BD9967 "
            android:fontFamily="@font/montserrat"
            android:onClick="onLoginClick"
            android:text="@string/MoreModule_ChangePassword"
            android:textColor="#fff"
            android:textSize="14sp"
            android:layout_below="@+id/retrypass"
            />



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>