<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_img"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/view"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:visibility="invisible"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">


        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_border_tint"
            android:ems="10"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat"
            android:hint="@string/LoginModule_EnterValidEmail"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textColorHint="@color/dark_gray"
            />

        <EditText
            android:id="@+id/editText_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/editText_email"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/grey_border_tint"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/LoginModule_EnterValidPassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textColorHint="@color/dark_gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_clr"
            android:backgroundTint="#BD9967"
            android:fontFamily="@font/montserrat"
            android:onClick="onLoginClick"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:text="@string/LoginModule_Login_Btn"
            android:textColor="#fff"
            android:layout_below="@+id/saveLoginCheckBox"
       />

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="55dp"
            android:buttonTint="#BD9967"
            android:fontFamily="@font/montserrat"
            android:layout_below="@+id/editText_pass"
            android:text="@string/LoginModule_Remmber_me"
            android:textColor="#FFF" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/montserrat"
            android:inputType="textEmailAddress"
            android:onClick="onForgotPasswordClick"
            android:text="@string/ForgotPasswordModule_text"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_below="@+id/button_login"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat"
            android:text="Need an account?"
            android:textAlignment="center"
            android:visibility="invisible"
            android:textColor="#fff"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="144dp"
            android:fontFamily="@font/montserrat"
            android:text="SIGN UP"
            android:visibility="invisible"
            android:textAlignment="center"
            android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
            android:textColor="#fff"
            android:textSize="12sp"
            />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>